--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,4 +1,4 @@
-.index {
+/* .index {
   background-color: #5a6d67;
   display: flex;
   flex-direction: row;
@@ -200,4 +200,4 @@
   position: fixed;
   top: 26px;
   width: 212px;
-}
+} */
