--- a/frontend/styleguide.css
+++ b/frontend/styleguide.css
@@ -4,5 +4,5 @@
   --fillin: rgba(144, 150, 148, 1);
   --primaryblue: rgba(58, 71, 189, 1);
   --variable-collection-fill-in-square: rgba(199, 221, 204, 1);
-  --wordscolor: rgba(73, 79, 77, 1);
+  --wordscolor: #494f4d;
 }
