--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,46 @@
+/* #root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
+
+.logo {
+  height: 6em;
+  padding: 1.5em;
+  will-change: filter;
+  transition: filter 300ms;
+}
+.logo:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
+.logo.react:hover {
+  filter: drop-shadow(0 0 2em #61dafbaa);
+}
+
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
+  }
+}
+
+.card {
+  padding: 2em;
+}
+
+.read-the-docs {
+  color: #888;
+} */
+
 #spinner {
   display: none;
 }
@@ -184,7 +227,7 @@
 }
 
 .index .text-wrapper-11 {
-  color: #291b25;
+  /* color: #291b25;
   font-family: "Inter", Helvetica;
   font-size: 20px;
   font-weight: 600;
@@ -193,7 +236,23 @@
   line-height: normal;
   position: absolute;
   top: 60%;
-  width: 40%;
+  width: 40%; */
+  color: #291b25;
+  background-color: #c7ddcc;
+  /* border-radius: 10px; */
+  display: inline-flex;
+  gap: 25px;
+  justify-content: center;
+  font-family: "Inter", Helvetica;
+  font-size: 20px;
+  font-weight: 600;
+  left: 30%;
+  letter-spacing: 1;
+  line-height: normal;
+  position: absolute;
+  top: 60%;
+  padding: 10px;
+  width: 40%; /* Set the desired width using viewport units */
 }
 
 .index .frame-2 {
