--- a/frontend/src/Graphs.css
+++ b/frontend/src/Graphs.css
@@ -5,7 +5,15 @@
 .container {
     max-width: 800px;
     margin: 50px auto;
+    position: relative;
 }
+
+  
+
+  
+  .tab_content_box img {
+    width: 100%; /* Make the graphs fill their container */
+  }
 
 .tab_trigger ul {
     margin: 0;
@@ -42,13 +50,32 @@
 .tab_container_wrap {
     width: fit-content;
 }
-.tab_container_wrap input {
+
+#spinner1 {
+    display: none;
+}
+
+#spinner2 {
+    display: none;
+}
+
+#spinner3 {
+    display: none;
+}
+
+.tab_container_wrap input[type="radio"] {
     position: absolute;
     width: 0;
     height: 0;
     margin: 0;
     z-index: -100;
     top: -10000px;
+}
+
+.tab_container_wrap {
+    font-family: "Inter", Helvetica;
+    font-size: 20px;
+    font-weight: 600;
 }
 
 /* .tab_container_wrap input:checked + .tab_content_box {
@@ -59,6 +86,10 @@
     background: #f0f0f0;
     padding: 20px;
     display: none;
+    position: absolute;
+    /* top: calc(100% + 10px); Adjust the distance below the graphs */
+    /* left: 0; */
+    width: 100%; /* Ensure the tab content boxes take the full width */
 }
 
 
